--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -24,7 +24,14 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
     <async-supported>true</async-supported>
-  </servlet>
+    
+  <multipart-config>
+    <max-file-size>20971520</max-file-size> <!-- 20MB -->
+    <max-request-size>20971520</max-request-size>
+    <file-size-threshold>0</file-size-threshold>
+  </multipart-config>
+</servlet>
+
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
